formatted html, styled css to look like google

--- a/index.html
+++ b/index.html
@@ -8,36 +8,40 @@
 	<div id="wrapper">
 		<nav id="navigation">
 			<ul>
-				<div><li><a href="#">Gmail</a></li></div>
-				<div><li><a href="#">Afbeeldingen</a></li></div>
-				<div><li><a href="#">Menu</a></li></div>
-				<div><li><a href="#">Notifications</a></li></div>
-				<div><li><a href="#">User</a></li></div>
+				<li><a href="#">Gmail</a></li>
+				<li><a href="#">Afbeeldingen</a></li>
+				<li><a href="#">Menu</a></li>
+				<li><a href="#">Notifications</a></li>
+				<li><a href="#">User</a></li>
 			</ul>
 		</nav>
-	</div>
-	<div class="content">
-		<div id="search">
-			<img src="https://www.google.nl/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Logo Google">
-			<input type="text" name="search-input">
-			<div id="go">
-				<input type="submit" name="search" value="Google zoeken">
-				<input type="submit" name="guess" value="Ik doe een gok">
+		<div class="content">
+			<div id="search">
+				<img src="https://www.google.nl/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Logo Google">
+				<input type="text" name="search-input">
+				<div id="go">
+					<input type="submit" name="search" value="Google zoeken">
+					<input type="submit" name="guess" value="Ik doe een gok">
+				</div>
 			</div>
 		</div>
-	</div>
-	<div id="footer">
-		<ul id="footer-left">
-			<li><a href="#">Adverteren</a></li>
-			<li><a href="#">Bedrijf</a></li>
-			<li><a href="#">Over</a></li>
-		</ul>
-		<ul id="footer-right">
-			<li><a href="#">Privacy</a></li>
-			<li><a href="#">Voorwaarden</a></li>
-			<li><a href="#">Instellingen</a></li>
-			<li><a href="#">Google.com gebruiken</a></li>
-		</ul>
+		<div id="footer">
+			<div id="footer-left">
+				<ul>
+					<li><a href="#">Adverteren</a></li>
+					<li><a href="#">Bedrijf</a></li>
+					<li><a href="#">Over</a></li>
+				</ul>
+			</div>
+			<div id="footer-right">
+				<ul>
+					<li><a href="#">Privacy</a></li>
+					<li><a href="#">Voorwaarden</a></li>
+					<li><a href="#">Instellingen</a></li>
+					<li><a href="#">Google.com gebruiken</a></li>
+				</ul>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
